<resources>
    <string name="app_name">HabitTrackerApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="habit_type">Habit type:</string>
    <string name="priority">Priority:</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="save_habit">save habit</string>
    <string name="good">good</string>
    <string name="bad">bad</string>

    <string-array name="array_priority">
        <item>low</item>
        <item>middle</item>
        <item>high</item>
    </string-array>
    <string name="title_activity_create_habit">CreateHabitActivity</string>
    <string name="add_new_habit">add new habit</string>
    <string name="count">count</string>
    <string name="period">period</string>
    <string name="periodicity">Periodicity:</string>
    <string name="color">Color:</string>
    <string name="toast_fill_fields">fill all fields</string>
    <string name="habitInfo">priority:  %1$s  type: %2$s  count:  %3$s  period: %4$s day</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Habit Tracker</string>
    <string name="home">home</string>
    <string name="about_app">about app</string>
    <string name="user_name">Daria</string>
    <string name="user_mail">user@mail.com</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="about_text">Habit helps you create healthy routines by helping you set goals, tracking your progress, and then motivating you with streaks/chains, all in a simple, clean, package.</string>
    <string name="search_habit">search habit</string>
    <string name="filter_sort"><![CDATA[Filter & Sort]]></string>
    <string name="sort_by_priority">sort by priority</string>
    <string name="sort_by_edit_date">sort by edit date</string>
    <string name="sort">sort</string>
    <string name="reset">reset</string>
</resources>